# ELFTools

./: .gitignore  LICENSE  README.md
elfcat2/: CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.in  readme.md
elfcat2/example/: CMakeLists.txt  Makefile  cmake_install.cmake  example.cpp
elfcat2/src/: main.cpp  report_gen.cpp  report_gen.hpp
elfcat2/src/data/js/: arrows.js
elfcat2/src/elf/: CMakeLists.txt  Makefile  cmake_install.cmake  defs.cpp  elf32.cpp  elf64.cpp  parser.cpp
elfcat2/src/elf/include/: defs.hpp  elf32.hpp  elf64.hpp  elfxx.hpp  parser.hpp
elfcat2/src/example/: readme.txt  sample.asm
elfcat2/src/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  utils.cpp
elfcat2/src/utils/include/: utils.hpp
signing/: sign-file.c
signing/QSELF/: QInstall.pro  README.md  TODO  linuxfiles.h  main.cpp  md5sum.txt  qinstall.cpp  qinstall.h  qinstall.ui  qtsudo  winfiles.cpp
signing/QSELF/Resource/: qinstall.blend
signing/QSELF/bash-binaryappend/: attach.sh  credits  extract.sh
signing/QSELF/encryption/: encryption.h
signing/QSELF/encryption/Qt-AES/: .qmake.stash  main (copy).cpp  main.cpp  qaesencryption.pro
signing/QSELF/encryption/SSL_TestSaveCertsFile/qt_ssl_client/: csslsocket.cpp  csslsocket.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_ssl_client.pro
signing/QSELF/encryption/SSL_TestSaveCertsFile/qt_ssl_server/: .qmake.stash  csslsocket.cpp  define.h  generatekeys.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_ssl_server.pro  sslserver.cpp  sslserver.h
signing/QSELF/encryption/rsa/: Rsa.cpp  Rsa.h  Rsa.pro  main.cpp
signing/QSELF/encryption/simpleCrypt/: simplecrypt.cpp  simplecrypt.h  use
signing/QSELF/linuxTest/: selfextract.cpp
signing/QSELF/other/: email.h
signing/QSELF/other/File-Splitter-Qt/: FileSplitter.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  splitterthread.cpp  splitterthread.h
signing/QSELF/other/smtp/: SmtpMime  emailaddress.cpp  emailaddress.h  mimeattachment.cpp  mimeattachment.h  mimecontentformatter.cpp  mimecontentformatter.h  mimefile.cpp  mimefile.h  mimehtml.cpp  mimehtml.h  mimeinlinefile.cpp  mimeinlinefile.h  mimemessage.cpp  mimemessage.h  mimemultipart.cpp  mimemultipart.h  mimepart.cpp  mimepart.h  mimetext.cpp  mimetext.h  quotedprintable.cpp  quotedprintable.h  smtpclient.cpp  smtpclient.h  smtpexports.h
signing/QSELF/quazip/: JlCompress.cpp  quazip.h
signing/elfgpg/src/: options.h
signing/elfsign-0.2.2/: COPYING  ChangeLog  README  configure  configure.in  elfsign.h
signing/elfsign-0.2.2/lib/: verify.c  verify.h
signing/elfsign-0.2.2/melf/: ChangeLog  README  configure  configure.in  libmelf.doxy  melf.c  melf.h  melf_dynamic.c  melf_elf.c  melf_internal.h  melf_list.c  melf_note.c  melf_program.c  melf_reloc.c  melf_res.c  melf_section.c  melf_string.c  melf_symbol.c  melf_symbolTable.c  stdelf.h.in
signing/elfsign-0.2.2/melf/docs/html/: annotated.html  examples.html  files.html  functions.html  group__elfheader.html  group__elfrelocs.html  group__elfres.html  group__melf.html  group__programs.html  group__sect__dynamic.html  group__sect__note.html  group__sect__strings.html  group__sect__symbols.html  group__sect__symboltable.html  group__sections.html  index.html  melf_8h-source.html  melf__internal_8h-source.html  modules.html  new_8c-example.html  stdelf_8h-source.html  struct__Elf32__Res.html  struct__elf__spec__header.html  struct__elf__spec__header__list.html  struct__melf.html
signing/elfsign-0.2.2/melf/example/: enum_sym  enum_sym.c  new.c  sign.c  test.c
signing/elfsign-0.2.2/melf/tools/: elfres.c
signing/elfsign-0.2.2/tools/: elfsign.c  elfverify.c
